# satellite-project

./: .gitignore  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
gradio-ui/: app.py  requirements.txt
nest-backend/: package-lock.json  package.json
nest-backend/src/: app.module.ts  main.ts
nest-backend/src/analysis/: analysis.controller.ts  analysis.entity.ts  analysis.module.ts  analysis.service.ts
nest-backend/src/queue/: queue.processor.ts
python-ml-service/: main.py
python-ml-service/data/: download_data.py
python-ml-service/llm/: report_generator.py
python-ml-service/models/: train_unet.py  unet.py
python-ml-service/rl/: env.py  train_rl.py
